SimpleComplex/Database 1.x, 2018-08-12
--------------------------------------
- Result methods for depleting/traversing all sets and rows.
- MsSql more query error codes mapped.
- Tests use TestHelper's method for circumventing phpunit's propensity
  to consume all exceptions.
- Secure that overriding Validate (if such) gets used.
- Release 1.0.

SimpleComplex/Database 1.x, 2018-08-11
--------------------------------------
- Query parameter validation on query failure always reported parameter error,
  even when none.
- DbQuery methods validateArguments()/validateArgumentsStringable() protected
  because not generic across DBMSs.
- Workaround for MsSql fetch-object producing segmentation fault when passed
  custom (non-stdClass) class name argument.
- Result tests.

SimpleComplex/Database 1.x, 2018-08-09
--------------------------------------
- MsSql query bugfixes: use simple arguments when simple query,
  and allow type qualified array to have only a single bucket,
  and check for non-empty type buckets.
- Result fetchColumn renamed; from fetchField.
- Result fetchAllArrays(), fetchAllObjects() instead of fetchAll(), to secure
  IDE recognition of list types (array[], object[]) and far simpler method
  parameter signature.
- Result fetchObject(), fetchAllObjects() check that class actually exists.
- Resolve native error code using error code ranges as well as particular codes.

SimpleComplex/Database 1.x, 2018-08-08
--------------------------------------
- Non-MsSql simple query always checks argument types, and object __toString().
- Query execution counter use natural value (first execution is 1), and counter
  renamed to nExecution; from execution.
- Safeguard against unintended reuse of non-prepared statement.
- MariaDb ability to call stored procedure via prepared statement confirmed,
  including ability to handle stored procedure producing more result sets.
- Allow executing simple query more times, if option reusable and intermediate